<resources>
    <string name="app_name">AnamApp</string>


    <string name="login_hint_login">" Login"</string>
    <string name="login_hint_password">" Password"</string>
    <string name="login_button_enter">Enter</string>
    <string name="login_text_field_sign_up_invite">Don\'t have an account? sign up</string>


    <string name="main_menu_button_registrate_patient">Registrate Patient</string>
    <string name="main_menu_button_search_patient">Search Patient</string>
    <string name="main_menu_button_list_employees">Employee List</string>


    <string name="search_patient_text_field_search_patient">Search Patient</string>
    <string name="search_patient_hint_patient_number">" nº patient"</string>
    <string name="search_patient_button_search">Search</string>


    <string name="symptons_check_list_title">Check List</string>


    <string name="search_patient_item_text_field_name">Name:</string>
    <string name="search_patient_item_text_field_medical_record">Medical Record:</string>


    <string name="patient_text_field_medical_record">Medical Record:</string>
    <string name="patient_text_field_birth_date">Birth Date:</string>
    <string name="patient_text_field_fone">Fone:</string>
    <string name="patient_text_field_age">Age:</string>
    <string name="patient_text_field_symptoms">Symptoms</string>


    <string name="register_patient_text_field_register_patient">Register Patient:</string>
    <string name="register_patient_hint_name">Name</string>
    <string name="register_patient_hint_medical_record">Medical Record</string>
    <string name="register_patient_button_registrate">Registrate</string>


    <string name="finish_symptoms_button">FINISH SYMPTOMS</string>
    <string name="general_symptoms_button">GENERAL SYMPTOMS</string>
    <string name="respiratory_system_symptoms_button">RESPIRATORY SYSTEM</string>
    <string name="gastrointestinal_system_symptoms_button">GASTROINTESTINAL SYSTEM</string>
    <string name="genitourinary_system_symptoms_button">GENITOURINARY SYSTEM</string>
    <string name="num_prontuario">Patient\'s number</string>
    <string name="patient_name">PATIENT\'S NAME</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone</string>
    <string name="symptons">SYMPTONS</string>
    <string name="age">Age</string>
    <string name="hopital_name">Name:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="coren">COREN:</string>
    <string name="address">Address:</string>
    <string name="register_nurse">Register Nurse</string>
    <string name="register_hospital">Register Hospital</string>
    <string name="btn_create_account">Create Account</string>

    <string name="btn_register_new_nurses">REGISTER NEW EMPLOYEE</string>
    <string name="tv_employee_list">Employees List</string>
    <string name="profile">Hospital Info</string>


    <string name="cannot_be_empty">This field can\'t be blank</string>

    <string name="invalid_email">Invalid e-mail address</string>


    <string name="password_invalids">Passwords doesn\'t matches</string>

    <string name="email_hint" translatable="false">E-mail</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm_password">Confirm password</string>

    <string name="authentication_failed">Authentication Failed</string>

    <string name="user_already_exists">E-mail already registered</string>

    <string name="weak_pass">Weak password</string>
    <string name="cardiovascular_system_button">CARDIOVASCULAR SYSTEM</string>
    <string name="superior_locomotor_system_button">SUPERIOR LOCOMOTOR SYSTEM</string>
    <string name="inferior_locomotor_system_button">INFERIOR LOCOMOTOR SYSTEM</string>

    <string name="authentication_sucessfull"> Authenticated successfully</string>

    <string name="name_nurse">Name</string>


    <!-- Filenames in your respectively language -->
    <string name="suplocomotor_symptoms_filename">suplocomotor_symptoms.json</string>
    <string name="cardiovascular_symptoms_filename">cardiovascular_symptoms.json</string>
    <string name="gastrointestinal_system_symptoms_filename">gastrointestinal_system_symptoms.json</string>
    <string name="general_symptoms_filename">general_symptoms.json</string>
    <string name="genitourinary_system_symptoms_filename">genitourinary_system_symptoms.json</string>
    <string name="inflocomotor_symptoms_filename">inflocomotor_symptoms.json</string>
    <string name="respiratory_system_symptoms_filename">respiratory_system_symptoms.json</string>

    <string name="alert_dialog">Deletion confirmation</string>

    <string name="delete_dialog">Are you sure you want to delete this data?</string>

    <string name="yes">YES</string>

    <string name="no">NO</string>
    <string name="patient_list">Patients List</string>

    <string name="main_menu_button_search_nurse">Search Nurse</string>

    <string name="search_nurse">Search Nurse</string>

    <string name="nurse_info">Nurse info</string>

    <string name="no_data_found">Sorry, no data found!</string>


    <string name="Email">E-mail:</string>
    <string name="Name">Name:</string>


    <string name="_spinner_email">Nurse e-mail</string>
    <string name="spinner_coren">Coren number</string>
    <string name="spinner_name">Nurse name</string>
    <string name="spinner_medical_record">Medical Record</string>
    <string name="spinner_patient_name">Patient name</string>



</resources>