<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".RegisterPatientActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="3:1"
            app:srcCompat="@drawable/logo"
            android:id="@+id/register_patient_image_view_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>

    <ImageView
            android:layout_width="33dp"
            android:layout_height="31dp"
            app:srcCompat="?attr/actionModeCloseDrawable"
            android:id="@+id/register_patient_image_view_back"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/register_patient_image_view_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="16dp">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_patient_text_field_register_patient"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="42dp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:hint="@string/register_patient_hint_name" android:id="@+id/register_patient_edit_text_name"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="32dp"
                android:background="@color/white"
                android:hint="@string/register_patient_hint_medical_record"
                android:id="@+id/register_patient_edit_text_medical_record"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_patient_button_registrate"
                android:layout_gravity="right" android:id="@+id/register_patient_button_registrate"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>