<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".activities.registerNewEmployeeActivity">

    <ImageView android:layout_width="33dp" android:layout_height="31dp" android:src="?attr/actionModeCloseDrawable"
               android:id="@+id/menu_image_view_back6" android:layout_marginTop="8dp"
               app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
               android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
               android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.325"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/logo" />
    <TextView
            android:text="@string/register_nurse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvRegistNurse" android:textColor="@color/white"
            android:textSize="20sp" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:textStyle="bold"/>
    <EditText
            android:background="@drawable/round_et"
            android:layout_width="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvRegistNurse" android:layout_height="50dp"
            android:hint="@string/coren"
            android:textColorHint="@color/colorPrimary"
    />
    <EditText

            android:background="@drawable/round_et"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" android:hint="@string/login_hint_login"
            android:textColorHint="@color/colorPrimary"/>
    <EditText
            android:background="@drawable/round_et"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText3" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            android:hint="@string/login_hint_password"
            android:textColorHint="@color/colorPrimary"
    />
    <Button
            android:text="@string/btn_create_account"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@drawable/round_btn"
            android:id="@+id/button3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0" android:textColor="@color/white" android:textSize="20sp"
            android:backgroundTint="@color/black" style="@style/Widget.AppCompat.Button.Colored"/>


</android.support.constraint.ConstraintLayout>