<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/logOut"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/logout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="156dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="@+id/scrollView5"
        app:layout_constraintStart_toStartOf="@+id/scrollView5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo" />

    <ImageView
        android:id="@+id/menu_image_view_back"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:layout_editor_absoluteY="16dp" />

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="260dp"
        android:layout_height="341dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnBuscarPaciente"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_btn"
                android:text="@string/main_menu_button_search_patient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Button
                android:id="@+id/btnEmployeeList"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/round_btn"
                android:text="@string/main_menu_button_list_employees"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSearchNurse" />

            <Button
                android:id="@+id/btnSearchNurse"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/round_btn"
                android:text="@string/main_menu_button_search_nurse"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnInfo" />

            <Button
                android:id="@+id/btnInfo"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/round_btn"
                android:text="@string/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnBuscarPaciente" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
